Adds simple tower

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,14 @@
   [farClippingPane]="10000"
 >
   <app-ground
-    [y]="-250"
-    [texture]="'/assets/textures/grasslight.jpg'"
+    texture="/assets/textures/grasslight.jpg"
+    [y]="0"
   ></app-ground>
+  <app-tower
+    texture="/assets/textures/tower.png"
+    [x]="0"
+    [y]="0"
+    [z]="0"
+    [height]="2000"
+  ></app-tower>
 </app-scene>
