Adds obj model loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     [y]="0"
   ></app-ground>
   <app-tower
-    texture="/assets/textures/tower.png"
+    model="/assets/models/cube.obj"
     [x]="0"
     [y]="0"
     [z]="0"
