Adds mtl loader as dependency and as provider, sets base path for loaders

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,11 +5,11 @@
   [farClippingPane]="10000"
 >
   <app-ground
-    texture="/assets/textures/grasslight.jpg"
+    texture="grasslight.jpg"
     [y]="0"
   ></app-ground>
   <app-tower
-    model="/assets/models/cube.obj"
+    model="cube.obj"
     [x]="0"
     [y]="0"
     [z]="0"
